--- a/notebooks/python_script.ipynb
+++ b/notebooks/python_script.ipynb
@@ -8,7 +8,12 @@
     },
     "kernelspec": {
       "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3.9.1 64-bit",
+      "metadata": {
+        "interpreter": {
+          "hash": "ac2eaa0ea0ebeafcc7822e65e46aa9d4f966f30b695406963e145ea4a91cd4fc"
+        }
+      }
     }
   },
   "cells": [
@@ -57,16 +62,23 @@
         "result = determine_eligibility(99019, [99001, 99224], 4, 20000, ref)\n",
         "print(result)"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Application Pending - income exceeds limit\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ]
 }
